# Mothership

./: .gitignore  .gitmodules  .mise.toml  README.md  Taskfile.yml  example.deploy.json  renovate.json
.github/workflows/: lint.yml  update-readme-timestamp.yml  update-readme-timestamp.yml.disabled  update-submodules.yml
scripts/: update-submodules.sh  update_project.py
scripts/deploy/: deploy_mothership.py  do_deployment.py
scripts/installs/: install-mise.ps1
scripts/pkg/: package_deployment_script.sh
scripts/symlink/: link_git_dir.sh
scripts/updater/: pyproject.toml  update-uv-packages.sh
scripts/updater/src/updater/: __init__.py  __main__.py  main.py
scripts/updater/src/updater/commands/git_cmd/: __init__.py  _cmd.py  prefab.py
scripts/updater/src/updater/libs/setup/: __init__.py  _logging_setup.py
scripts/updater/src/updater/services/shell_svc/: controller.py
